# grholdings-carwash-api-v2

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: validate.yml
dashboard/: index.html
notebooks/placer-api/: carparc.ipynb  competitors_section.ipynb  key_stats.ipynb  retail_performance.ipynb
resources/docs/: DATA_SOURCES.md
src/: main.py
src/clients/: placer_client.py
src/core/: cache.py  date_utils.py  logging.py  request_tracker.py  settings.py
src/models/: address.py  car_parc_analysis.py  car_parc_result.py  competitor.py  key_stats.py  market_analysis.py  retailer.py
src/models/placer/: demographics.py  loyalty.py  poi.py  ranking.py  trade_area.py  visit_trends.py
src/routers/: address_pipeline.py
src/services/: analysis_orchestrator_service.py  car_parc_service.py  competitor_service.py  excel_export_service.py  google_location_service.py  key_stats_service.py  location_service.py  powerpoint_export_service.py  retail_performance_service.py
tests/: test_competitor_service.py  test_retail_performance_service.py
