[project]
name = "grholdings-carwash-api"
version = "0.1.0"
description = "Fastapi backend for carwash project"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.0",
    "fastapi[standard]>=0.121.0",
    "googlemaps>=4.10.0",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic-settings>=2.0.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 180
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
